crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_switcher_lists_the_root_and_its_agents.snap
---
source: crates/bingo-surface-tui/src/view.rs
assertion_line: 1537
expression: "render_tree(&tree, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⎿  Needs you                                                                  "
"  ⏺ project   have it reviewed                                                  "
"❯ ⏺ reviewer  idle · needs you                                                  "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 needs you (ctrl+g)                                                      fake-1"
