crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_transcript_scrolls_back_a_page.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: scrolled
---
"                                                                                "
"> line 13                                                                       "
"                                                                                "
"> line 14                                                                       "
"                                                                                "
"> line 15                                                                       "
"                                                                                "
"> line 16                                                                       "
"                                                                                "
"> line 17                                                                       "
"                                                                                "
"> line 18                                                                       "
"                                                                                "
"> line 19                                                                       "
"                                                                                "
"> line 20                                                                       "
"                                                                                "
"> line 21                                                                       "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
