crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__the_word_after_a_verb_is_drawn_under_the_verb.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"❯ bingo.tools.web                                                               "
"  bingo.tasks                                                                   "
"  wordcount                                                                     "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > /plugins disable                                                           │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                     fake/fake-1"
