crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__without_a_rail_the_same_cards_draw_under_the_running_rows.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: screen
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> run the board                                                                 "
"                                                                                "
"❯ Board                                                                         "
"id  state                                                                       "
"─────────                                                                       "
" 1  ready                                                                       "
" 2  held                                                                        "
"[ 1 Tick ] [ 2 Reset ]                                                          "
"                                                                                "
"  progress                                                                      "
"████████░░ 80 % · cargo test                                                    "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
